$Id$

2006-11-21 Roy Hills <Roy.Hills@nta-monitor.com>

	* psk-crack.h: New header file for psk-crack.
	  This separates the psk-crack headers, defines, structures and
	  prototypes from ike-scan.

2006-10-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* isakmp.c: Modified creation of proposal and SA payloads, so that
	  these payloads contain the transform and proposal payloads
	  respectively (previously, they only returned the header, and it
	  was down to the caller to add the rest).  Also added add_prop()
	  function which allows for multiple proposals within an SA
	  payload (although ike-scan does not have any way to use this yet).

	* ike-scan.c: Modified initialise_ike_packet() function to use
	  modified SA and proposal functions.

2006-10-10 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-psk-crack-3: New script to check Nortel Contivity PSK
	  cracking.  Uses test data obtained from a Contivity 1600 running
	  software release 6.00.

	* psk-crack.1: Added --username option description to psk-crack
	  manpage.

2006-10-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Show backoff patterns even if there was only a
	  single response.  Some implementations, e.g. linksys, don't
	  retry at all, and this change allows these to be matched as
	  well. The lack of a pattern is sufficiently unusual to be a
	  pattern itself.

2006-09-23 Anonymous <l...e@gmail.com>

	* psk-crack.c: Added code to allow cracking Nortel Contivity
	  pre-shared keys, which use a variation of Mamro's method.  Thanks
	  to an anonymous benefactor.

2006-08-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-backoff-patterns: Added new PIX backoff pattern, with details
	  of the PIX versions for both patterns.

2006-08-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* udp.h: Removed unneeded BSD-flavour declarations and unneeded macros.
	  Changed types from u_int{8,16,32}_t to uint{8,16,32}_t.  Added
	  definition of struct pseudo_hdr (moved from ike-scan.c).